--- a/master_thesis/RiverSim_master_thesis.tex
+++ b/master_thesis/RiverSim_master_thesis.tex
@@ -672,6 +672,12 @@
   \appendix
 
   \chapter{Główna pętla programu}
+    
+    Instalacja biblioteki riversim w Python3 (tylko Linux).
+    
+    \begin{mintedbox}{bash} 
+      python3 -m pip install riversim\end{mintedbox}
+    
     \begin{mintedbox}{python} 
       from riversim import *
       import numpy as np
